<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_nav_home"
        android:enabled="true"
        android:icon="@drawable/selector_tab_home"
        android:title="@string/tab_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_nav_message"
        android:enabled="true"
        android:icon="@drawable/selector_tab_message"
        android:title="@string/tab_message"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_nav_order"
        android:enabled="true"
        android:icon="@drawable/selector_tab_order"
        android:title="@string/tab_order"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_nav_mine"
        android:enabled="true"
        android:icon="@drawable/selector_tab_mine"
        android:title="@string/tab_mine"
        app:showAsAction="ifRoom"/>

</menu>