<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_white"
    android:orientation="vertical">

    <com.geek.huixiaoer.common.widget.OptionView
        android:id="@+id/option_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:option_background="@drawable/line_bottom_bg"
        app:option_title_text="@string/hint_username"
        app:option_title_text_color="@color/color_text_caption" />

    <com.geek.huixiaoer.common.widget.OptionView
        android:id="@+id/option_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:option_background="@drawable/line_bottom_bg"
        app:option_title_text="@string/hint_account_password"
        app:option_title_text_color="@color/color_text_caption" />

    <com.geek.huixiaoer.common.widget.OptionView
        android:id="@+id/option_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:option_background="@drawable/line_bottom_bg"
        app:option_title_text="@string/hint_mobile_number"
        app:option_title_text_color="@color/color_text_caption" />

    <Button
        android:id="@+id/btn_login_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:background="@drawable/shape_btn_frame_yellow"
        android:text="@string/btn_login_out"
        android:textColor="@color/color_btn_text_primary"
        android:textSize="@dimen/t16"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_error_notice"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:textSize="@dimen/t12"
            android:layout_marginTop="30dp"
            android:text="@string/prompt_login"
            android:textColor="@color/color_text_prompt"/>

    </LinearLayout>

</LinearLayout>