<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:layout_marginTop="30dp"
        android:paddingRight="15dp"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/rule_password"
            android:hint="@string/hint_password_new"
            android:inputType="textPassword"
            android:maxLength="18"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/color_text_black"
            android:textColorHint="@color/color_hint_text"
            android:textSize="@dimen/t16" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/rule_password"
            android:hint="@string/hint_password_confirm"
            android:inputType="textPassword"
            android:maxLength="18"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/color_text_black"
            android:textColorHint="@color/color_hint_text"
            android:textSize="@dimen/t16" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/selector_btn_default"
        android:text="@string/btn_sure"
        android:textColor="@color/color_text_white"
        android:textSize="@dimen/t18" />

</LinearLayout>