<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_white"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <RelativeLayout
        android:id="@+id/rl_banner"
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <com.geek.huixiaoer.common.widget.autoviewpager.AutoScrollViewPager
            android:id="@+id/autoScrollViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/autoScrollIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="10dp"
        android:textColor="@color/color_text_caption"
        android:textSize="@dimen/t14" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/selector_btn_default"
        android:text="登 录"
        android:textColor="@color/white"
        android:textSize="@dimen/t16" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_btn_default"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:textSize="@dimen/t16" />

    <Button
        android:id="@+id/btn_forum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_btn_default"
        android:text="@string/btn_forum"
        android:textColor="@color/white"
        android:textSize="@dimen/t16" />

    <Button
        android:id="@+id/btn_integral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_btn_default"
        android:text="@string/btn_integral"
        android:textColor="@color/white"
        android:textSize="@dimen/t16" />

    <Button
        android:id="@+id/btn_blacklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_btn_default"
        android:text="@string/btn_blacklist"
        android:textColor="@color/white"
        android:textSize="@dimen/t16" />

</LinearLayout>