<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="text"
                    android:maxLength="12"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/color_text_black"
                    android:textColorHint="@color/color_hint_text"
                    android:textSize="@dimen/t16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_cardNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_cardNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cardNo"
                    android:inputType="text"
                    android:maxLength="18"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:digits="0123456789xX"
                    android:textColor="@color/color_text_black"
                    android:textColorHint="@color/color_hint_text"
                    android:textSize="@dimen/t16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/rule_password"
                    android:hint="@string/hint_password_new"
                    android:inputType="textPassword"
                    android:maxLength="18"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/color_text_black"
                    android:textColorHint="@color/color_hint_text"
                    android:textSize="@dimen/t16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/rule_password"
                    android:hint="@string/hint_password_confirm"
                    android:inputType="textPassword"
                    android:maxLength="18"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/color_text_black"
                    android:textColorHint="@color/color_hint_text"
                    android:textSize="@dimen/t16" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_invitation_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:visibility="gone"
                android:paddingRight="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_invitation_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/rule_password"
                    android:hint="@string/hint_invitation_code"
                    android:inputType="text"
                    android:maxLength="20"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/color_text_black"
                    android:textColorHint="@color/color_hint_text"
                    android:textSize="@dimen/t16" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="28dp"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:paddingRight="28dp"
                android:textSize="@dimen/t16"
                android:hint="@string/hint_street"
                android:textColorHint="@color/color_hint_text"
                android:textColor="@color/color_text_black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:background="@color/color_text_caption"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mobileTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/mobileEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="手机号码"
                    android:inputType="text"
                    android:maxLength="18"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:digits="0123456789xX"
                    android:textColor="@color/color_text_black"
                    android:textColorHint="@color/color_hint_text"
                    android:textSize="@dimen/t16" />

            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/veryCodeTil"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_weight="2">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/veryCodeEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="验证码"
                        android:inputType="text"
                        android:maxLength="18"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:digits="0123456789xX"
                        android:textColor="@color/color_text_black"
                        android:textColorHint="@color/color_hint_text"
                        android:textSize="@dimen/t16" />

                </android.support.design.widget.TextInputLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="@color/line_default_color" />

                <TextView
                    android:id="@+id/tvSend"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/btn_send_captcha"
                    android:textSize="@dimen/t16" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/rule_password"
                    android:hint="@string/hint_address"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/color_text_black"
                    android:textColorHint="@color/color_hint_text"
                    android:textSize="@dimen/t16" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:gravity="center|start"
                android:paddingBottom="10dp"
                android:paddingLeft="28dp"
                android:paddingRight="28dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/t16"
                    android:hint="@string/hint_volunteer"
                    android:textColorHint="@color/color_hint_text"
                    android:textColor="@color/color_text_black"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:text="是"
                        android:textSize="@dimen/t16"
                        android:textColor="@drawable/selector_main_text"/>

                    <RadioButton
                        android:id="@+id/rb_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="否"
                        android:layout_marginLeft="50dp"
                        android:textSize="@dimen/t16"
                        android:textColor="@drawable/selector_main_text" />

                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:background="@color/color_text_caption"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/selector_btn_default"
                android:text="@string/btn_register"
                android:textColor="@color/color_text_white"
                android:textSize="@dimen/t18" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>